[package]
name = "lk-cli"
description = "Developer CLI for ledgerkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lk"
path = "src/main.rs"

[dependencies]
lk-types = { workspace = true }
lk-core = { workspace = true }
lk-connectors = { workspace = true }
lk-webhooks = { workspace = true }
lk-simulator = { workspace = true }
lk-store = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
