[package]
name = "lk-connectors"
description = "Payment provider connector implementations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lk-types = { workspace = true }
lk-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
