[package]
name = "lk-examples"
description = "Example usage of ledgerkit crates"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lk-types = { workspace = true }
lk-core = { workspace = true }
lk-connectors = { workspace = true }
lk-webhooks = { workspace = true }
lk-store = { workspace = true }
lk-simulator = { workspace = true }
lk-observability = { workspace = true }
lk-server = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
