[package]
name = "lk-simulator"
description = "Local payment event simulation engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lk-types = { workspace = true }
lk-core = { workspace = true }
lk-connectors = { workspace = true }
lk-webhooks = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
