[package]
name = "lk-webhooks"
description = "Webhook ingestion and verification pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lk-types = { workspace = true }
lk-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
